@@ -2,7 +2,6 @@ package co.rsk.peg;
 
 import static co.rsk.peg.BridgeSupportTestUtil.*;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
 import co.rsk.bitcoinj.core.*;
 import co.rsk.bitcoinj.script.ScriptBuilder;
@@ -26,131 +25,153 @@ import co.rsk.test.builders.FederationSupportBuilder;
 import org.ethereum.config.blockchain.upgrades.ActivationConfig;
 import org.ethereum.config.blockchain.upgrades.ActivationConfigsForTest;
 import org.ethereum.core.*;
+import org.ethereum.crypto.ECKey;
+import org.ethereum.vm.DataWord;
+import org.ethereum.vm.LogInfo;
 import org.ethereum.vm.PrecompiledContracts;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import java.util.*;
 
 class RegisterBtcTransactionIT {
-
+    public static final long RSK_EXECUTION_BLOCK_NUMBER = 1000L;
+    public static final long RSK_EXECUTION_BLOCK_TIMESTAMP = 10L;
     private final BridgeConstants bridgeConstants = BridgeMainNetConstants.getInstance();
-    private final NetworkParameters btcParams = bridgeConstants.getBtcParams();
+    private final NetworkParameters btcNetworkParams = bridgeConstants.getBtcParams();
     private final BridgeSupportBuilder bridgeSupportBuilder = BridgeSupportBuilder.builder();
+    private final ActivationConfig.ForBlock activations = ActivationConfigsForTest.all().forBlock(0);
+    private final Transaction rskTx = TransactionUtils.createTransaction();
+    private final Coin minimumPeginValue =  bridgeConstants.getMinimumPeginTxValue(activations);
+    private final Block rskExecutionBlock = getRskExecutionBlock(RSK_EXECUTION_BLOCK_NUMBER, RSK_EXECUTION_BLOCK_TIMESTAMP);
+    private Repository repository;
+    private FederationSupport federationSupport;
+    private BridgeStorageProvider bridgeStorageProvider;
+    private BtcTransaction bitcoinTransaction;
+    private PartialMerkleTree pmtWithTransactions;
+    private int btcBlockWithPmtHeight;
+    private RskAddress rskReceiver;
+    private BridgeSupport bridgeSupport;
+    private ArrayList<LogInfo> logs;
 
-    @Test
-    void whenRegisterALegacyBtcTransaction_shouldRegisterTheNewUtxoAndTransferTheRbtcBalance() throws Exception {
-        // Arrange
-        ActivationConfig.ForBlock activations = ActivationConfigsForTest.all().forBlock(0);
-        Repository repository = BridgeSupportTestUtil.createRepository();
-        Repository track = repository.startTracking();
-        Block rskExecutionBlock = getRskExecutionBlock();
+
+    @BeforeEach
+    void setUp() throws Exception{
+        repository = BridgeSupportTestUtil.createRepository().startTracking();
 
         BtcLockSenderProvider btcLockSenderProvider = new BtcLockSenderProvider();
-        FeePerKbSupport feePerKbSupport = getFeePerKbSupport(repository, bridgeConstants);
+        StorageAccessor bridgeStorageAccessor = new BridgeStorageAccessorImpl(repository);
 
+        FeePerKbStorageProvider feePerKbStorageProvider = new FeePerKbStorageProviderImpl(bridgeStorageAccessor);
+        FeePerKbSupport feePerKbSupport = new FeePerKbSupportImpl(bridgeConstants.getFeePerKbConstants(), feePerKbStorageProvider);
+
+        FederationStorageProvider federationStorageProvider = new FederationStorageProviderImpl(bridgeStorageAccessor);
         Federation federation = P2shErpFederationBuilder.builder().build();
-        FederationStorageProvider federationStorageProvider = getFederationStorageProvider(track, federation);
-        FederationSupport federationSupport = getFederationSupport(federationStorageProvider, activations, bridgeConstants.getFederationConstants());
+        federationStorageProvider.setNewFederation(federation);
+        FederationConstants federationConstants = bridgeConstants.getFederationConstants();
+        federationSupport = FederationSupportBuilder.builder()
+            .withFederationConstants(federationConstants)
+            .withFederationStorageProvider(federationStorageProvider)
+            .withActivations(activations)
+            .build();
+
+        bridgeStorageProvider = new BridgeStorageProvider(repository, PrecompiledContracts.BRIDGE_ADDR, btcNetworkParams, activations);
+        BtcBlockStoreWithCache.Factory btcBlockStoreFactory = new RepositoryBtcBlockStoreWithCache.Factory(btcNetworkParams, 100, 100);
+        BtcBlockStoreWithCache btcBlockStoreWithCache = btcBlockStoreFactory.newInstance(repository, bridgeConstants, bridgeStorageProvider, activations);
 
         BtcECKey btcPublicKey = BitcoinTestUtils.getBtcEcKeyFromSeed("seed");
-        Coin btcTransferred = bridgeConstants.getMinimumPeginTxValue(activations);
-        BtcTransaction bitcoinTransaction = createPegInTransaction(federationSupport.getActiveFederation().getAddress(), btcTransferred, btcPublicKey);
-        TransactionOutput output = bitcoinTransaction.getOutput(0);
-        List<UTXO> expectedFederationUtxos = Collections.singletonList(utxoOf(bitcoinTransaction, output));
+        ECKey ecKey = ECKey.fromPublicOnly(btcPublicKey.getPubKey());
+        rskReceiver = new RskAddress(ecKey.getAddress());
+        bitcoinTransaction = createPegInTransaction(federationSupport.getActiveFederation().getAddress(), minimumPeginValue, btcPublicKey);
 
-        BridgeStorageProvider bridgeStorageProvider = new BridgeStorageProvider(track, PrecompiledContracts.BRIDGE_ADDR, bridgeConstants.getBtcParams(), activations);
-        BtcBlockStoreWithCache.Factory btcBlockStoreFactory = new RepositoryBtcBlockStoreWithCache.Factory(bridgeConstants.getBtcParams(), 100, 100);
-        BtcBlockStoreWithCache btcBlockStoreWithCache = btcBlockStoreFactory.newInstance(track, bridgeConstants, bridgeStorageProvider, activations);
-
-        PartialMerkleTree pmtWithTransactions = createValidPmtForTransactions(Collections.singletonList(bitcoinTransaction.getHash()), bridgeConstants.getBtcParams());
-        int btcBlockWithPmtHeight = bridgeConstants.getBtcHeightWhenPegoutTxIndexActivates() + bridgeConstants.getPegoutTxIndexGracePeriodInBtcBlocks();
+        pmtWithTransactions = createValidPmtForTransactions(List.of(bitcoinTransaction.getHash()), btcNetworkParams);
+        btcBlockWithPmtHeight = bridgeConstants.getBtcHeightWhenPegoutTxIndexActivates() + bridgeConstants.getPegoutTxIndexGracePeriodInBtcBlocks();
         int chainHeight = btcBlockWithPmtHeight + bridgeConstants.getBtc2RskMinimumAcceptableConfirmations();
 
-        BridgeEventLoggerImpl bridgeEventLogger = spy(new BridgeEventLoggerImpl(bridgeConstants, activations, new ArrayList<>()));
+        logs = new ArrayList<>();
+        BridgeEventLoggerImpl bridgeEventLogger = new BridgeEventLoggerImpl(bridgeConstants, activations, logs);
 
-        recreateChainFromPmt(btcBlockStoreWithCache, chainHeight, pmtWithTransactions, btcBlockWithPmtHeight, bridgeConstants.getBtcParams());
-
+        recreateChainFromPmt(btcBlockStoreWithCache, chainHeight, pmtWithTransactions, btcBlockWithPmtHeight, btcNetworkParams);
         bridgeStorageProvider.save();
 
-        BridgeSupport bridgeSupport = getBridgeSupport(bridgeEventLogger, bridgeStorageProvider, activations, federationSupport, feePerKbSupport, rskExecutionBlock, btcBlockStoreFactory, track, btcLockSenderProvider);
+        bridgeSupport = bridgeSupportBuilder
+            .withBridgeConstants(bridgeConstants)
+            .withProvider(bridgeStorageProvider)
+            .withActivations(activations)
+            .withEventLogger(bridgeEventLogger)
+            .withFederationSupport(federationSupport)
+            .withFeePerKbSupport(feePerKbSupport)
+            .withExecutionBlock(rskExecutionBlock)
+            .withBtcBlockStoreFactory(btcBlockStoreFactory)
+            .withRepository(repository)
+            .withBtcLockSenderProvider(btcLockSenderProvider)
+            .build();
+    }
 
-        Transaction rskTx = TransactionUtils.createTransaction();
-        org.ethereum.crypto.ECKey key = org.ethereum.crypto.ECKey.fromPublicOnly(btcPublicKey.getPubKey());
-
-        RskAddress receiver = new RskAddress(key.getAddress());
-        co.rsk.core.Coin receiverBalance = track.getBalance(receiver);
-        co.rsk.core.Coin expectedReceiverBalance = receiverBalance.add(co.rsk.core.Coin.fromBitcoin(btcTransferred));
-
+    @Test
+    void registerBtcTransaction_forALegacyBtcTransaction_shouldRegisterTheNewUtxoAndTransferTheRbtcBalance() throws Exception {
         // Act
         bridgeSupport.registerBtcTransaction(rskTx, bitcoinTransaction.bitcoinSerialize(), btcBlockWithPmtHeight, pmtWithTransactions.bitcoinSerialize());
-
         bridgeSupport.save();
-        track.commit();
 
         // Assert
         Optional<Long> heightIfBtcTxHashIsAlreadyProcessed = bridgeStorageProvider.getHeightIfBtcTxhashIsAlreadyProcessed(bitcoinTransaction.getHash());
-
         assertTrue(heightIfBtcTxHashIsAlreadyProcessed.isPresent());
-        assertEquals(rskExecutionBlock.getNumber(), heightIfBtcTxHashIsAlreadyProcessed.get());
-        assertEquals(expectedFederationUtxos, federationSupport.getActiveFederationBtcUTXOs());
-        assertEquals(expectedReceiverBalance, repository.getBalance(receiver));
+        assertEquals(RSK_EXECUTION_BLOCK_NUMBER, heightIfBtcTxHashIsAlreadyProcessed.get());
 
-        verify(bridgeEventLogger, times(1)).logPeginBtc(receiver, bitcoinTransaction, btcTransferred, 0);
+        int outputIndex = 0;
+        TransactionOutput output = bitcoinTransaction.getOutput(outputIndex);
+        List<UTXO> expectedFederationUtxos = Collections.singletonList(utxoOf(bitcoinTransaction, output));
+        assertEquals(expectedFederationUtxos, federationSupport.getActiveFederationBtcUTXOs());
+
+        co.rsk.core.Coin expectedReceiverBalance = co.rsk.core.Coin.fromBitcoin(output.getValue());
+        assertEquals(expectedReceiverBalance, repository.getBalance(rskReceiver));
+
+        assertLogPegInBtc();
+    }
+
+    @Test
+    void registerBtcTransaction_forARepeatedLegacyBtcTransaction_shouldNotPerformAnyChange() throws Exception {
+        // Arrange
+        bridgeSupport.registerBtcTransaction(rskTx, bitcoinTransaction.bitcoinSerialize(), btcBlockWithPmtHeight, pmtWithTransactions.bitcoinSerialize());
+        bridgeSupport.save();
+
+        co.rsk.core.Coin expectedReceiverBalance = repository.getBalance(rskReceiver);
+        List<UTXO> expectedFederationUTXOs = federationSupport.getActiveFederationBtcUTXOs();
+
+        // Act
+        bridgeSupport.registerBtcTransaction(rskTx, bitcoinTransaction.bitcoinSerialize(), btcBlockWithPmtHeight, pmtWithTransactions.bitcoinSerialize());
+        bridgeSupport.save();
+
+        // Assert
+        assertEquals(expectedFederationUTXOs, federationSupport.getActiveFederationBtcUTXOs());
+        assertEquals(expectedReceiverBalance, repository.getBalance(rskReceiver));
     }
 
     private static UTXO utxoOf(BtcTransaction bitcoinTransaction, TransactionOutput output) {
         return new UTXO(
-                bitcoinTransaction.getHash(),
-                output.getIndex(),
-                output.getValue(),
-                0,
-                bitcoinTransaction.isCoinBase(),
-                output.getScriptPubKey()
+            bitcoinTransaction.getHash(),
+            output.getIndex(),
+            output.getValue(),
+            0,
+            bitcoinTransaction.isCoinBase(),
+            output.getScriptPubKey()
         );
-    }
-
-    private static FederationSupport getFederationSupport(FederationStorageProvider federationStorageProvider, ActivationConfig.ForBlock activationConfig, FederationConstants federationConstants) {
-        return FederationSupportBuilder.builder()
-                .withFederationConstants(federationConstants)
-                .withFederationStorageProvider(federationStorageProvider)
-                .withActivations(activationConfig)
-                .build();
-    }
-
-    private FederationStorageProvider getFederationStorageProvider(Repository track, Federation federation) {
-        FederationStorageProvider federationStorageProvider = createFederationStorageProvider(track);
-        federationStorageProvider.setNewFederation(federation);
-        return federationStorageProvider;
-    }
-
-    private static FeePerKbSupport getFeePerKbSupport(Repository repository, BridgeConstants bridgeConstants) {
-        StorageAccessor bridgeStorageAccessor = new BridgeStorageAccessorImpl(repository);
-        FeePerKbStorageProvider feePerKbStorageProvider = new FeePerKbStorageProviderImpl(bridgeStorageAccessor);
-        return  new FeePerKbSupportImpl(
-                bridgeConstants.getFeePerKbConstants(),
-                feePerKbStorageProvider
-        );
-    }
-
-    private BridgeSupport getBridgeSupport(BridgeEventLoggerImpl bridgeEventLogger, BridgeStorageProvider bridgeStorageProvider, ActivationConfig.ForBlock activationsBeforeForks, FederationSupport federationSupport, FeePerKbSupport feePerKbSupport, Block rskExecutionBlock, BtcBlockStoreWithCache.Factory btcBlockStoreFactory, Repository repository, BtcLockSenderProvider btcLockSenderProvider) {
-        return bridgeSupportBuilder
-                .withBridgeConstants(bridgeConstants)
-                .withProvider(bridgeStorageProvider)
-                .withEventLogger(bridgeEventLogger)
-                .withActivations(activationsBeforeForks)
-                .withFederationSupport(federationSupport)
-                .withFeePerKbSupport(feePerKbSupport)
-                .withExecutionBlock(rskExecutionBlock)
-                .withBtcBlockStoreFactory(btcBlockStoreFactory)
-                .withRepository(repository)
-                .withBtcLockSenderProvider(btcLockSenderProvider)
-                .build();
     }
 
     private BtcTransaction createPegInTransaction(Address federationAddress, Coin coin, BtcECKey pubKey) {
-        BtcTransaction btcTx = new BtcTransaction(btcParams);
+        BtcTransaction btcTx = new BtcTransaction(btcNetworkParams);
         btcTx.addInput(BitcoinTestUtils.createHash(0), 0, ScriptBuilder.createInputScript(null, pubKey));
-        btcTx.addOutput(new TransactionOutput(btcParams, btcTx, coin, federationAddress));
+        btcTx.addOutput(new TransactionOutput(btcNetworkParams, btcTx, coin, federationAddress));
 
         return btcTx;
+    }
+
+    private void assertLogPegInBtc() {
+        Sha256Hash peginTransactionHash = bitcoinTransaction.getHash();
+        List<DataWord> encodedTopics = getEncodedTopics(BridgeEvents.PEGIN_BTC.getEvent(), rskReceiver.toString(), peginTransactionHash.getBytes());
+        byte[] encodedData = getEncodedData(BridgeEvents.PEGIN_BTC.getEvent(), minimumPeginValue.getValue(), 0);
+
+        assertEventWasEmittedWithExpectedTopics(encodedTopics, logs);
+        assertEventWasEmittedWithExpectedData(encodedData, logs);
     }
 }
